[package]
name = "frame-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
camino = "1"
clap = { version = "4.5.40", features = ["derive"] }
frame-metadata = "23.0.0"
hex = "0.4.3"
log = "0.4.27"
regex = "1.12.2"
sc-executor = { version = "0.42.0", default-features = false, features = ["std"] }
scale = { version = "3.7.5", package = "parity-scale-codec" }
scale-decode = "0.16.0"
scale-info = { version = "2.11.6", features = ["schema"] }
scale-value = "0.18.0"
serde_json = "1.0.140"
sp-core = { version = "36.1.0", default-features = false, features = ["std"] }
sp-crypto-hashing = "0.1.0"
sp-io = { version = "40.0.1", default-features = false, features = ["std"] }
sp-state-machine = { version = "0.45.0", default-features = false, features = ["std"] }
sp-tracing = "17.1.0"
