[package]
name = "frame-runtime-api"
version = "0.2.0"
edition = "2021"
description = "Inspect FRAME metadata of a Polkadot-SDK WASM runtime."
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
camino = "1"
clap = { version = "4.5.53", features = ["derive"] }
frame-metadata = "23.0.0"
hex = "0.4.3"
log = "0.4.28"
regex = { version = "1.12.2", default-features = false, features = ["std"] }
sc-executor = { version = "0.45.0", default-features = false, features = ["std"] }
scale = { version = "3.7.5", package = "parity-scale-codec" }
scale-decode = "0.16.2"
scale-info = { version = "2.11.6", features = ["schema"] }
scale-value = "0.18.1"
serde_json = "1.0.145"
sp-core = { version = "38.1.0", default-features = false, features = ["std"] }
sp-crypto-hashing = "0.1.0"
sp-io = { version = "43.0.0", default-features = false, features = ["std"] }
sp-state-machine = { version = "0.48.0", default-features = false, features = ["std"] }
sp-tracing = "19.0.0"
